@@ -17,6 +17,7 @@ version <next>:
 - tee muxer
 - il filter ported from libmpcodecs
 - support ID3v2 tags in ASF files
+- RF64 support in WAV muxer
 
 
 version 1.1:
